# MyGit

./: CMakeLists.txt  README.md
.myGit/: index
src/: main.cpp
src/commands/: HashObject.cpp  HashObject.hpp  add.cpp  add.hpp  init.cpp  init.hpp
src/objets/: Blob.cpp  Blob.hpp  Utilities.cpp  Utilities.hpp  index.cpp  index.hpp
test/: testFile.txt
